--- a/src/homepage/search.html
+++ b/src/homepage/search.html
@@ -121,9 +121,10 @@
   <!--script src="../php/chat/jquery-1.11.2.min.js" ></script-->
   <script src="../chat/jd.js" ></script>
   <script src="../chat/date.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-app.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/init.js"></script>
   <script src="../util/util.js"></script>
   <script src="js/index.js"></script>
 
