--- a/src/welcome/index.html
+++ b/src/welcome/index.html
@@ -67,11 +67,11 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <!--script src="../../util/verify.js"></script-->
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-auth.js"></script>  
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-storage.js"></script>
-
+    <script src="/__/firebase/4.5.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-storage.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/init.js"></script>
     <script src="assets/js/index.js"></script>
 
 </body>
