added new html for matches

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@ if(isset($_SESSION['id'])){
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
 	<meta name="description" content="">
+	<link rel="manifest" href="/manifest.json">
 	<title>Press To Open</title>
 	
 	
 	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="homepage/css/bootstrap.min.css" />
-	<link rel="stylesheet" type="text/css" href="homepage/css/materialdesignicons.min.css" />
-	<link rel="stylesheet" type="text/css" href="homepage/css/jquery.mCustomScrollbar.min.css" >
-	<link rel="stylesheet" type="text/css" href="homepage/css/prettyPhoto.css" />
-	<link rel="stylesheet" type="text/css" href="homepage/css/template.css" />\
+	<link rel="stylesheet" type="text/css" href="src/homepage/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css" href="src/homepage/css/materialdesignicons.min.css" />
+	<link rel="stylesheet" type="text/css" href="src/homepage/css/jquery.mCustomScrollbar.min.css" >
+	<link rel="stylesheet" type="text/css" href="src/homepage/css/prettyPhoto.css" />
+	<link rel="stylesheet" type="text/css" href="src/homepage/css/template.css" />\
 	
 </head>
 
@@ -37,7 +38,7 @@ if(isset($_SESSION['id'])){
 					<div class="navbar-header">
 				
 						<div class="navbar-brand" href="#">
-                            <img src="homepage/images/brand/PressToOpen_Final_TrademarkReady2.png"/>
+                            <img src="src/homepage/images/brand/PressToOpen_Final_TrademarkReady2.png"/>
                         </div>
 					</div>
 
@@ -54,8 +55,8 @@ if(isset($_SESSION['id'])){
                     <div class="nino-menuItem pull-right">
                     <div class="collapse navbar-collapse pull-right" id="nino-navbar-collapse">
                         <ul class="nav navbar-nav">
-                            <li class="navbar-login"><a onclick="window.location.href='signin/index.html'">Login</a></li>
-                            <li class="navbar-sign"><a onclick="window.location.href='signup/index.html'">Sign Up</a></li>
+                            <li class="navbar-login"><a onclick="window.location.href='src/signin/index.html'">Login</a></li>
+                            <li class="navbar-sign"><a onclick="window.location.href='src/signup/index.html'">Sign Up</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div>
@@ -123,7 +124,7 @@ if(isset($_SESSION['id'])){
             <div class="about-sec" layout="column" id="about-sc">
                 <div layout="row" class="verticalcenter">
                     <div class="about-image">
-                        <img class="about-image" src="homepage/images/ico/about-image.png"/>
+                        <img class="about-image" src="src/homepage/images/ico/about-image.png"/>
                     </div>
                     <div class="about-item">
                         <div class="about-header">Can't Find A Part-Time Relationship?</div>
@@ -154,7 +155,7 @@ if(isset($_SESSION['id'])){
                              <button type="button" id="about-signin" href="signin">Sign-Up</button>
                         </div>
                         <div class="join-image">
-                            <img class="join-image" src="homepage/images/ico/shutterstock_495755413.png"/>
+                            <img class="join-image" src="src/homepage/images/ico/shutterstock_495755413.png"/>
                         </div>
                     </div>
                 </div> 
@@ -164,16 +165,16 @@ if(isset($_SESSION['id'])){
 
 
 	<!-- javascript -->
-	<script type="text/javascript" src="homepage/js/jquery.min.js"></script>	
-	<script type="text/javascript" src="homepage/js/isotope.pkgd.min.js"></script>
-	<script type="text/javascript" src="homepage/js/jquery.prettyPhoto.js"></script>
-	<script type="text/javascript" src="homepage/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="homepage/js/jquery.hoverdir.js"></script>
-	<script type="text/javascript" src="homepage/js/modernizr.custom.97074.js"></script>
-	<script type="text/javascript" src="homepage/js/jquery.mCustomScrollbar.concat.min.js"></script>
-	<script type="text/javascript" src="homepage/js/template.js"></script>
+	<script type="text/javascript" src="src/homepage/js/jquery.min.js"></script>	
+	<script type="text/javascript" src="src/homepage/js/isotope.pkgd.min.js"></script>
+	<script type="text/javascript" src="src/homepage/js/jquery.prettyPhoto.js"></script>
+	<script type="text/javascript" src="src/homepage/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="src/homepage/js/jquery.hoverdir.js"></script>
+	<script type="text/javascript" src="src/homepage/js/modernizr.custom.97074.js"></script>
+	<script type="text/javascript" src="src/homepage/js/jquery.mCustomScrollbar.concat.min.js"></script>
+	<script type="text/javascript" src="src/homepage/js/template.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="homepage/js/scroll.js"></script>
+    <script type="text/javascript" src="src/homepage/js/scroll.js"></script>
 
 
 </body>
