--- a/src/signin/index.html
+++ b/src/signin/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button1-1.css">
+    <link rel="manifest" href="/manifest.json">
+
 </head>
 
 <body style="background-repeat:repeat;">
@@ -44,7 +46,7 @@
             </div>
             <div class="form-group">
                 <button id="signInButton" type="button" class="btn btn-primary btn-block" data-bs-hover-animate="pulse" style="width:390px;height:56px;">SIGN IN</button>
-            </div><span style="color:white;font-size:22px;margin:0px;margin-left:180px;padding-top:0px;">OR </span>
+            </div><span style="color:white;font-size:22px;margin:0px;margin-left:180px  ;padding-top:0px;">OR </span>
            <div class="row" style="margin-left:20px;margin-right:0px;padding-left:0px;padding-top:0px;margin-top:0px;height:auto;width:400px;">
                 <div class="col-md-12" style="padding-left:0px;padding-right:0px;height:auto;margin-right:0px;margin-left:0px;width:420px;margin-top:18px;">
                     <button id="fbLogin" type="button" data-bs-hover-animate="pulse" style=" background:transparent; width:153px;font-size:30px;padding-top:-10px;margin-top:0px;height:auto;padding-bottom:0px;margin-right:25px;padding-right:25px;padding-left:25px;border: none">
@@ -59,7 +61,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-animation.js"></script>
-    <script src="../../util/md5.min.js"></script>
+    <!--script src="../../util/md5.min.js"></script-->
     <!--script src="../../util/verify.js"></script-->
     <!--script src="../../../facebook/fb.js"></script-->
    <script src="/__/firebase/4.5.0/firebase-app.js"></script>
