--- a/src/messages/index.html
+++ b/src/messages/index.html
@@ -17,13 +17,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Learn how to use the Firebase platform on the Web">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Friendly Chat</title>
+  <title>Messages</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
   <!-- Web Application Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <!-- Add to homescreen for Chrome on Android -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -114,9 +114,9 @@
  <script src="/__/firebase/4.5.0/firebase-app.js"></script>
   <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
   <script src="/__/firebase/4.5.0/firebase-database.js"></script>
-  <script src="/__/firebase/4.5.0/firebase-messaging.js"></script>
   <script src="/__/firebase/4.5.0/firebase-storage.js"></script>
   <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-messaging.js"></script>
   <script src="/__/firebase/init.js"></script>
   <script src="scripts/main.js"></script>
   <!--script src="scripts/matches.js"></script-->
