--- a/src/profile/index.html
+++ b/src/profile/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="assets/css/Navigation-with-Button1.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="../util/css/loader.css">
+    <link rel="manifest" href="/manifest.json">
+
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 
 </head>
