--- a/src/welcome/index.html
+++ b/src/welcome/index.html
@@ -14,8 +14,6 @@
     <link rel="stylesheet" href="assets/css/nav-start.css">
     <link rel="stylesheet" href="assets/css/Registration-Form-with-Photo.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-  
-});
 </head>
 
 <body style="height:100%;background-color:#29a1f2;">
@@ -38,7 +36,7 @@
             <div class="col-md-12" style="width:665px;height:360px;background-color:transparent;padding-top:21px;"><img src="assets/img/pt-heart.png" style="width:50px;margin-right:0px;margin-left:307px;height:50px;">
                 <form id="form" style="padding-bottom:0px;width:650px;background-color:transparent;height:300px;padding-left:50px;padding-right:50px;">
                     <h2 class="text-center" style="margin-top:-36px;color:white;font-family:'PT Sans', sans-serif;margin-left:0px;font-size:32px;margin-right:-35px;">Welcome to Part-time Relationships!</h2>
-                    <div style="height:0px;">
+                    <div style="height:0px;margin-right:40px;">
                         <div class="col-md-12" style="width:120px;height:120px;padding-right:0px;padding-left:0px;background-color:rgba(255,255,255,0.25);"><img class="img-circle" id="profile" style="width:120px;padding-top:0px;padding-right:0px;padding-left:0px;height:120px;margin-left:0px;margin-top:-4px;" style="width:115px; padding-top:0px;padding-right:0px;padding-left:0px;height:115px;margin-left:19px;margin-top:12px;">
                             <button class="btn btn-default active" id="profileImageBtn" name="profileImageBtn" type="button" value="Select Files" style="padding-right:6px;padding-bottom:8px;padding-left:8px;background-color:rgb(221,123,199);color:white;font-size:27px;border-radius:50%;padding-top:0px;width:50px;height:50px; margin-top:-20px;border-color:transparent;">+</button>
                             <input type="file" name="my_file" id="my_file" accept="image/*" style="display: none;">
@@ -67,10 +65,11 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <!--script src="../../util/verify.js"></script-->
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-auth.js"></script>  
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.1/firebase-storage.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-storage.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/init.js"></script>
 
     <script src="assets/js/index.js"></script>
 
