--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ if(isset($_SESSION['id'])){
                     <div class="collapse navbar-collapse pull-right" id="nino-navbar-collapse">
                         <ul class="nav navbar-nav">
                             <li class="navbar-login"><a onclick="window.location.href='src/signin/index.html'">Login</a></li>
-                            <li class="navbar-sign"><a onclick="window.location.href='src/signup/index.html'">Sign Up</a></li>
+                            <li class="navbar-sign"><a onclick="window.location.href='src/signup/signup2/index.html'">Sign Up</a></li>
                         </ul>
                     </div><!-- /.navbar-collapse -->
                 </div>
