--- a/src/messages/index.html
+++ b/src/messages/index.html
@@ -47,13 +47,16 @@
 
   <!-- App Styling -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" type="text/css" href="../homepage/materialize/css/materialize.css">
+
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="../member/assets/fonts/ionicons.min.css">
 </head>
 <body>
-  <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+  <div class="demo-layout mdl-layout mdl-js-layout mdl-color--grey-100">
   <!-- Header section containing logo -->
-  <header style="display:none" class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+  <header hidden style="display:none" class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
     <div class="mdl-layout__header-row">
       <div id="user-container">
         <div hidden id="user-pic" style="display: none"></div>
@@ -66,24 +69,25 @@
     
     </div>
   </header>
-  <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
-        <nav id="matched_users" class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
-        </nav>
-    </div>
+  <ul id="slide-out" class="side-nav fixed">
+    <li style="background-color:#3C3C3C;">
+      <a class="center-align" href="../homepage/search.html" style="color:white;">Back To Members</a>
+    </li>
+  </ul>
 
   <main class="mdl-layout__content mdl-color--grey-100">
-    <div id="messages-card-container" class="mdl-cell mdl-cell--12-col mdl-grid">
+    <div id="messages-card-container" class="valign-wrapper mdl-cell mdl-cell--12-col mdl-grid">
 
       <!-- Messages container -->
-      <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--6-col-desktop">
+      <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--12-col-desktop">
         <div class="mdl-card__supporting-text mdl-color-text--grey-600">
           <div id="messages">
             <span id="message-filler"></span>
           </div>
           <form id="message-form" action="#">
-            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <input class="mdl-textfield__input" type="text" id="message">
-              <label class="mdl-textfield__label" for="message">Message...</label>
+            <div style="border-color:#ff758a color:#FF758A" class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input style="color:black" class="mdl-textfield__input" type="text" id="message">
+              <label style="color:#FF758A" class="mdl-textfield__label" for="message">Message...</label>
             </div>
             <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
               Send
@@ -111,6 +115,8 @@
 <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
 <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
   <script src="scripts/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
  <script src="/__/firebase/4.5.0/firebase-app.js"></script>
   <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
   <script src="/__/firebase/4.5.0/firebase-database.js"></script>
