--- a/src/profile/index.html
+++ b/src/profile/index.html
@@ -9,6 +9,8 @@
     <meta name="google-signin-client_id" content="412591321120-q6q71f9ur9qe6ndnpov4todi17h9hcc2.apps.googleusercontent.com">
 
     <title id="title">Profile</title>
+    <link rel="stylesheet" type="text/css" href="../homepage/materialize/css/materialize.css">
+
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/button.css">
@@ -17,40 +19,34 @@
     <link rel="stylesheet" href="../util/css/loader.css">
     <link rel="manifest" href="/manifest.json">
 
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 
 </head>
 
 <body style="background-color:rgba(238,238,238,0.75);">
-    <div>
-        <nav class="navbar navbar-default navbar-fixed-top navigation-clean-button" style="padding-bottom:2px;">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="#" style="height:50px;padding:0px;width:201px;"> <img src="assets/img/partime-final-logo.jpg"></a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="../homepage/search.html">Members </a></li>
-                        <li><a href="../messages">Messages </a></li>
-                        <li class="active" role="presentation"><a href="#">Winks </a></li>
-                    </ul>
-                     <div style = "display:none" align="middle" class="g-signin2" data-cookiepolicy='single_host_origin' data-onsuccess="onSignIn"></div>
-                    <p class="navbar-text navbar-right actions">
-                        <a href='./' ><img id="user_img" class="img-circle"  style="width:45px;height:45px;margin-bottom:10px;margin-right:10px;">
-                        <span id="nav_name" style="font-size:16px;margin-right:20px;"></span></a>
-                        <a class="navbar-link" href="#">
-                            <i class="glyphicon glyphicon-bell" style="font-size:20px;padding:10px;padding-top:10px;margin-top:0px;background-color:#32adf2;color:white;padding-bottom:10px;border-radius:5px; border-width: 1px;">
-                            </i>
-                        </a>
-                        <button id="signOutButton" class="btn btn-default action-button" style="padding-top:10px;padding-bottom:10px;margin-bottom:10px;margin-left:0px;">Sign Out </button>
-                    </p>
-                </div>
-            </div>
-        </nav>
+      
+  <div class="navbar-fixed">
+    <nav>
+        <div class="nav-wrapper" style="background-color:white">
+          <a href="#" class="brand-logo left"><img style="margin-left:20px;margin-top:10px;height:40px;" src="../homepage/images/brand/PressToOpen_Final_TrademarkReady2.png"/></a> 
+          <ul id="nav-mobile" class="right hide-on-small-and-down">
+            <li><a class='dropdown-button ' href='#' data-activates='dropdown1'><img id="navHeart" style="margin-bottom:5px;height:25px;" src="/pt-heart.png"/>
+            <span id="badge" class="new badge">0</span></a><li>
+             <ul style="margin-top:10px;" id='dropdown1' class='dropdown-content'>
+            </ul>
+            <li class="active"><a id="nameLink" style="font-size:14px;color:black;" href="#"></a></li>
+            <li><a id="signOut" style="font-size:14px;color:black;">Sign Out</a></li>
+          </ul>
+           <ul class="left hide-on-med-and-down" style="margin-left:15%;">
+              <li><a style="color:black;" href="../homepage/search.html">Members</a></li>
+              <li><a style="font-size:14px;color:black;" href="../messages">Messages</a></li>
+              <li><a style="font-size:14px;color:black;" href=#join>Winks</a></li>
+            </ul>
+        </div>
+      </nav>
+
     </div>
     <div class="loader" id="loader" style="display:none"></div>
-    <div id="myDiv" class="animate-bottom" style="padding-left:50px;padding-right:40px;margin-top:74px;">
+    <div id="myDiv" class="animate-bottom" style="padding-left:50px;padding-right:40px;margin-top:20px;">
         <div class="container" style="margin-right:0px;padding-left:0px;padding-right:0px;width:1110px;margin-left:0px;">
             <div class="row" style="margin-left:0px;margin-right:0px;padding-left:0px;padding-top:8px;margin-bottom:15px;">
                 <div class="col-md-12" style="padding-top:10px;padding-bottom:10px;width:auto;margin-left:10px;">
@@ -75,7 +71,7 @@
             <div class="row" style="margin-left:16px;">
                 <div class="col-md-6" style="width:410px;padding-left:0px;padding-bottom:0px;padding-right:0px;">
                     <div class="row" style="background-color:white;padding:10px;margin-right:0px;margin-left:0px;width:410px;padding-right:10px;padding-top:15px;padding-bottom:0px;">
-                        <div class="col-md-12" style="padding-right:0px;padding-left:0px;margin-bottom:25px;"><i class="glyphicon glyphicon-user" style="font-size:14px;margin-left:20px;color:#32adf2;"></i><span style="font-size:16px;margin-left:9px;margin-bottom:0px;padding-bottom:0px;">Basic Overview<i class="glyphicon glyphicon-edit" style="margin-left:175px;color:#ff778a;font-size:12px;"></i><a href="#" style="font-size:12px;margin-left:5px;color:#ff778a;">Edit </a></span></div>
+                        <div class="col-md-12" style="padding-right:0px;padding-left:0px;margin-bottom:25px;"><i class="glyphicon glyphicon-user" style="font-size:14px;margin-left:20px;color:#32adf2;"></i><span style="font-size:16px;margin-left:9px;margin-bottom:0px;padding-bottom:0px;">Basic Overview<i id="editBasicInfo" class="glyphicon glyphicon-edit" style="margin-left:175px;color:#ff778a;font-size:12px;"></i><a href="#" style="font-size:12px;margin-left:5px;color:#ff778a;">Edit </a></span></div>
                         <div
                         class="col-md-12" style="width:auto;padding-right:0px;padding-left:0px;margin-left:14px;">
                             <ul class="list-group" style="width:180px;margin-bottom:0px;">
@@ -108,7 +104,7 @@
                     </div>
                 </div>
                 <div class="row" style="background-color:white;padding:10px;margin-right:0px;margin-left:0px;width:410px;padding-right:10px;padding-top:0px;padding-bottom:0px;margin-top:15px;">
-                    <div class="col-md-12" style="padding:10px;padding-right:0px;padding-left:0px;margin-bottom:0px;"><i class="glyphicon glyphicon-globe" style="font-size:14px;margin-left:20px;color:#32adf2;"></i><span style="font-size:16px;margin-left:9px;margin-bottom:0px;padding-bottom:0px;">Social Media<i class="glyphicon glyphicon-edit" style="margin-left:197px;color:#ff778a;font-size:12px;"></i><a href="#" style="font-size:12px;margin-left:5px;color:#ff778a;">Edit </a></span>
+                    <div class="col-md-12" style="padding:10px;padding-right:0px;padding-left:0px;margin-bottom:0px;"><i class="glyphicon glyphicon-globe" style="font-size:14px;margin-left:20px;color:#32adf2;"></i><span style="font-size:16px;margin-left:9px;margin-bottom:0px;padding-bottom:0px;">Social Media<i id="editSocial" class="glyphicon glyphicon-edit" style="margin-left:197px;color:#ff778a;font-size:12px;"></i><a href="#" style="font-size:12px;margin-left:5px;color:#ff778a;">Edit </a></span>
                         <div
                         class="row" style="padding-top:0px;margin-left:0px;margin-right:0px;margin-top:25px;">
                             <div class="col-md-12" style="width:140px;margin-top:10px;height:40px;"><i class="fa fa-facebook-official" style="font-size:18px;color:#3b5998;"></i><span style="margin-left:10px;font-size:12px;">Facebook </span></div>
@@ -130,7 +126,12 @@
 
         <div class="col-md-6" style="width:650px;padding-left:0px;margin-left:32px;background-color:transparent;padding-right:0px;">
             <div class="row visible-xs-block visible-sm-block visible-xs-inline visible-sm-inline visible-md-inline visible-xs-inline-block visible-sm-inline-block visible-md-inline-block visible-lg-inline-block" style="width:585px;margin-left:0px;background-color:white;">
-                <div class="col-md-12 visible-xs-inline visible-sm-inline visible-md-inline-block visible-lg-inline-block" style="padding:10px;padding-right:10px;padding-left:10px;margin-left:0px;width:645px;padding-top:15px;background-color:white;padding-bottom:10px;height:200px;"><i class="fa fa-photo" style="font-size:14px;margin-left:10px;color:#32adf2;"></i><span style="font-size:16px;margin-left:9px;">My Photos<i class="glyphicon glyphicon-edit" style="margin-left:440px;color:#ff778a;font-size:12px;"></i><a href="#" style="font-size:12px;margin-left:5px;color:#ff778a;">Edit </a></span>
+                <div class="col-md-12 visible-xs-inline visible-sm-inline visible-md-inline-block visible-lg-inline-block" style="padding:10px;padding-right:10px;padding-left:10px;margin-left:0px;width:645px;padding-top:15px;background-color:white;padding-bottom:10px;height:200px;"><i class="fa fa-photo" style="font-size:14px;margin-left:10px;color:#32adf2;"></i>
+                    <span style="font-size:16px;margin-left:9px;">My Photos
+                        <a id="editPhotos" style="cursor:pointer;cursor:hand;font-size:12px;max-width:30px;margin-left:5px;color:#ff778a;">
+                            <i class="glyphicon glyphicon-edit" style="margin-left:440px;color:#ff778a;font-size:12px;"></i>Edit </a>
+                    </span>
+
                     <form id="upload" action="../upload.php" method="POST" enctype="multipart/form-data">
 
                     <ul class="list-inline" style="margin-top:25px;margin-left:10px;width:568px;padding-left:0px;padding-right:0px;height:112px;">
@@ -213,18 +214,18 @@
     </div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-auth.js"></script>    
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-firestore.js"></script> 
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-database.js"></script>  
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-storage.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-database.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-storage.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/init.js"></script>
+
     <script src="../util/util.js"></script>    
     <script src="assets/js/index.js"></script>
-
-
-
-
 
 </body>
 
