--- a/src/signup/index.html
+++ b/src/signup/index.html
@@ -55,19 +55,11 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-animation.js"></script>
-    <!--script src="../../util/md5.min.js"></script-->
-    <!--script src="../../util/verify.js"></script>
-    <script src="../../../facebook/fb.js"></script>
-    <script src="../../../google/google.js"></script>
-    <script onload="handleClientLoad()" src="https://apis.google.com/js/platform.js"></script--> 
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-auth.js"></script>  
-    <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/init.js"></script>
     <script src="assets/js/index.js"></script>
-
-
-
-
 
 </body>
 
