--- a/src/signup/signup2/index.html
+++ b/src/signup/signup2/index.html
@@ -21,7 +21,7 @@
 
 <body class="login-page">
 
-	<div class="page-header header-filter" style="background: #febbbb;
+	<div class="page-header" style="background: #febbbb;
     background: -moz-linear-gradient(-45deg, #febbbb 0%, #fe9090 45%, #ff5c5c 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(-45deg, #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(135deg, #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -31,47 +31,39 @@
 				<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
 					<div class="card card-signup">
 						<h4 class="card-title text-center">Sign Up</h4>
-
 						<form class="form">
-							
 							<div class="card-content">
-
 								<div class="input-group">
 									<span class="input-group-addon">
 										<i class="material-icons">face</i>
 									</span>
-
 									<input id="name" type="text" class="form-control" placeholder="Your Name...">
 								</div>
-
-
 								<div class="input-group">
 									<span class="input-group-addon">
 										<i class="material-icons">email</i>
 									</span>
 									<input id="email" type="text" class="form-control" placeholder="Email...">
 								</div>
-
 								<div class="input-group">
 									<span class="input-group-addon">
 										<i class="material-icons">lock_outline</i>
 									</span>
-									<input id="pw" type="password" placeholder="Password..." class="form-control" />
+									<input id="password" type="password" placeholder="Password..." class="form-control" />
 								</div>
-
 							</div>
 							<div class="footer text-center">
-								<button type="button" style="color:#EE4C5D;" class="btn btn-primary btn-simple btn-wd btn-lg">Get Started</button>
+								<button id="registerBtn" type="button" style="color:#EE4C5D;" class="btn btn-primary btn-simple btn-wd btn-lg">Get Started</button>
 							</div>
 							<div style="background-image: linear-gradient(60deg, rgb(238, 76, 93), rgb(244, 133, 116));" class="footer footer-primary text-center">
 								<div class="social-line">
-									<a class="btn btn-just-icon btn-simple">
+									<a id="fbSignup" class="btn btn-just-icon btn-simple">
 										<i class="fa fa-facebook-square"></i>
 									</a>
 									<a class="btn btn-just-icon btn-simple">
 										<i class="fa fa-twitter"></i>
 									</a>
-									<a class="btn btn-just-icon btn-simple">
+									<a id="googleSignup" class="btn btn-just-icon btn-simple">
 										<i class="fa fa-google-plus"></i>
 									</a>
 								</div>
@@ -82,37 +74,21 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		
-
+		</div>	
 	</div>
-
-
 
 </body>
 	<!--   Core JS Files   -->
 	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
 	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="assets/js/material.min.js"></script>
-
-	<!--    Plugin for Date Time Picker and Full Calendar Plugin   -->
-	<script src="assets/js/moment.min.js"></script>
-
-	<!--	Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/   -->
-	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
-
-	<!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker   -->
-	<script src="assets/js/bootstrap-datetimepicker.js" type="text/javascript"></script>
-
-	<!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select   -->
-	<script src="assets/js/bootstrap-selectpicker.js" type="text/javascript"></script>
-
 	<!--	Plugin for Tags, full documentation here: http://xoxco.com/projects/code/tagsinput/   -->
 	<script src="assets/js/bootstrap-tagsinput.js"></script>
-
-	<!--	Plugin for Fileupload, full documentation here: http://www.jasny.net/bootstrap/javascript/#fileinput   -->
-	<script src="assets/js/jasny-bootstrap.min.js"></script>
-
 	<!--    Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc    -->
 	<script src="assets/js/material-kit.js?v=1.2.0" type="text/javascript"></script>
+	<script src="/__/firebase/4.5.0/firebase-app.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+    <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/init.js"></script>
+	<script src="assets/js/index.js"></script>
 </html>
