updated profile page, added dropzone functionality

--- a/src/profile/index.html
+++ b/src/profile/index.html
@@ -33,13 +33,13 @@
 
          <ul style="margin-top:10px;" id='dropdown1' class='dropdown-content'>
         </ul>
-        <li><a id="nameLink" style="font-size:12px;color:black;" href="../profile"></a></li>
-        <li><a id="signOut" style="font-size:12px;color:black;">Sign Out</a></li>4
+        <li class="active"><a id="nameLink" style="font-size:12px;color:black;" href="#"></a></li>
+        <li><a id="signOutBtn" style="font-size:12px;color:black;">Sign Out</a></li>4
           <!-- Dropdown Structure -->
          
       </ul>
        <ul class="left hide-on-med-and-down" style="margin-left:20%;">
-          <li class="active"><a style="color:black;" href="#home">Members</a></li>
+          <li><a style="color:black;" href="../homepage/search.html">Members</a></li>
           <li><a style="color:black;" href="../messages">Messages</a></li>
           <li><a style="color:black;" href=#join>Winks</a></li>
         </ul>
@@ -223,7 +223,6 @@
     <script src="/__/firebase/4.5.0/firebase-storage.js"></script>
     <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
     <script src="/__/firebase/init.js"></script>
-
     <script src="../util/util.js"></script>    
     <script src="assets/js/index.js"></script>
 
