--- a/src/basicinfo/index.html
+++ b/src/basicinfo/index.html
@@ -15,21 +15,13 @@
 
 </head>
 
-<body style="background-repeat:round;background-size:auto;background-position:top;min-height:667px;">
-    <div class="login-clean" style="background-color:transparent;padding-top:30px;height:100%;margin-top:0px;">
-        <nav class="navbar navbar-default navigation-clean-button">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="#"> </a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
-                </div>
-                <div class="collapse navbar-collapse" id="navcol-1">
-                    <ul class="nav navbar-nav"></ul>
-                    <p class="navbar-text navbar-right actions" style="font-size:23px;margin-right:0px;margin-left:0px;"><span style="color:rgb(248,248,248);font-size:20px;font-family:Dosis, sans-serif;">Back To Homepage </span> <img class="img-circle" src="assets/img/52084.png" style="height:45px;color:rgba(245,245,245,0);background-color:rgba(255,255,255,0);width:45px;margin-left:1px;margin-right:-10px;padding-bottom:0px;margin-bottom:0px;"></p>
-                </div>
-            </div>
-        </nav>
-        <form name="myForm" style="background-color:transparent;padding-left:0px;padding-right:0px;padding-top:40px;width:auto;height:395px;">
+<body>
+    <div class="login-clean" style=" background: #febbbb;
+    background: -moz-linear-gradient(-45deg, #febbbb 0%, #fe9090 45%, #ff5c5c 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #febbbb 0%,#fe9090 45%,#ff5c5c 100%); /* Chrome10-25,Safari5.1-6 */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#febbbb', endColorstr='#ff5c5c',GradientType=1;height:100%;margin-top:0px;height:100%;">
+       
+        <form name="myForm" style="background-color:transparent;padding-left:0px;padding-right:0px;width:auto;height:100%;">
             <h1 class="text-left" style="margin-left:0px;color:rgb(240,245,251);margin-bottom:8px;font-family:'Roboto Condensed', sans-serif;margin-right:99px;padding-left:1px;font-size:25px;">I identify as...</h1>
             <h2 class="sr-only">Login Form</h2>
             <div class="form-group">
