Added page for pricing plans

--- a/src/messages/index.html
+++ b/src/messages/index.html
@@ -69,7 +69,7 @@
     
     </div>
   </header>
-  <ul id="slide-out" class="side-nav fixed">
+  <ul id="slide-out" class="side-nav fixed" style="background-color:#F5F5F5">
     <li style="background-color:#3C3C3C;">
       <a class="center-align" href="../homepage/search.html" style="color:white;">Back To Members</a>
     </li>
