--- a/src/matches/index.html
+++ b/src/matches/index.html
@@ -18,8 +18,6 @@
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
     <link href="assets/css/material-kit.css?v=1.2.0" rel="stylesheet"/>
 
-  <!-- CSS Just for demo purpose, don't include it in your project -->
-  <link href="assets/assets-for-demo/vertical-nav.css" rel="stylesheet" />
 
 </head>
 
@@ -104,9 +102,10 @@
   
 </body>
   <!--   Core JS Files   -->
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-app.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-auth.js"></script>
+  <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/init.js"></script>
   <script src="assets/js/jquery.min.js" type="text/javascript"></script>
   <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="assets/js/material.min.js"></script>
