--- a/src/plan/index.html
+++ b/src/plan/index.html
@@ -17,20 +17,16 @@
       background: -webkit-linear-gradient(top right,#00b8fb,#7cdffd); /*Safari 5.1-6*/
       background: -o-linear-gradient(top right,#00b8fb,#7cdffd); /*Opera 11.1-12*/
       background: -moz-linear-gradient(top right,#00b8fb,#7cdffd); /*Fx 3.6-15*/
-      background: linear-gradient(top right, #00b8fb, #7cdffd); /*Standard*/">
+      background: linear-gradient(top right, #00b8fb, #7cdffd); /*Standard*/
+      display:flex;min-height:100vh;flex-direction:column;">
     <!-- Start Page Loading -->
-    <div id="loader-wrapper">
-      <div id="loader"></div>
-      <div class="loader-section section-left"></div>
-      <div class="loader-section section-right"></div>
-    </div>
-    <nav style="background-color: white;">
+    <nav style="background-color: white;height:55px;">
       <div class="container" style="background: white;">
         <div class="nav-wrapper">
-          <div class="row" style="height:40px;">
+          <div class="row" style="height:35px;">
             <div class="col s3">
               <a href="#" class="brand-logo left" style="margin-top:10px;" >
-                <img style="margin-top:0px;height:40px;" src="../homepage/images/brand/PressToOpen_Final_TrademarkReady2.png"/>
+                <img style="margin-top:0px;height:35px;" src="../homepage/images/brand/PressToOpen_Final_TrademarkReady2.png"/>
               </a> 
             </div>
            
@@ -54,20 +50,19 @@
     </div>
 
     <div class="loader" id="loader" style="display:none"></div>
-    <div id="main"">
+    <div id="main" style="flex: 1 0 auto;">
       <!-- START WRAPPER -->
       <div class="wrapper">
         <section id="content">
           <div class="container">
-            <div class="center-align" align="center" style="margin-top:40px; font-size:26px;color:white;">Select Your Plan</div>
-
+            <div class="center-align" align="center" style="margin-top:15px;font-size:26px;color:white;">Select Your Plan</div>
             <div id="pricing-page" class="section">
               <div class="row animate-bottom">
-                <div class="card" style="padding:2px;">
+                <div class="card" style="padding:5px;">
                   <div id="freeTrialHeader" class="card-content" style="margin:0px;padding:0px;height:80px;width:100%">
                     <div class="row" style="height:100%;">
                       <div class="valign-wrapper col s3" style="height:100%;max-width:140px;">
-                         <p class="center-align valign-wrapper" style="height:auto;">
+                         <p class="center-align valign-wrapper" >
                           <input class="with-gap" value=0 name="group1" type="radio" id="freeTrialRadio"  />
                           <label id="free" for="freeTrialRadio" style="height:50%;color:#6F6F6F;font-size:16px;">Free Trial</label>
                         </p>
@@ -223,24 +218,24 @@
               <a id="selectPlan" style="width:160px;height:40px;font-size:12px;padding:1px;" class="waves-effect waves-red btn">Proceed To Checkout</a>
             </div>
           </div><!--container-->
-        </section><!--section-->
-      </div><!--wrapper-->
-
-    </div><!--main-->
-    <footer class="page-footer" style="background-color:#333333">
-          <div class="footer-copyright">
-            <div class="container" style="margin-top:20px;">
-              <div class="row">
-                <div class="col l6 s12" ">
-                  <img style="margin-top:0px;height:40px;" src="assets/images/pto_white.png"/>
-                </div>
-                <div style="padding-top:20px;font-size:12px;" class="right-align container">
-                © 2017 Press To Open, Inc. Site by <span style="font-size:12px;color:#BE466D">Dk Web Design</span>
-                </div>
-              </div>
+        </div>
+      </section>
+    </div>
+  </div>
+   <footer class="page-footer" style="background-color:#333333">
+      <div class="footer-copyright">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12" ">
+              <img style="margin-top:0px;height:30px;" src="assets/images/pto_white.png"/>
+            </div>
+            <div font-size:12px;" class="right-align ">
+            © 2017 Press To Open, Inc. Site by <span style="font-size:12px;color:#BE466D">Dk Web Design</span>
             </div>
           </div>
-        </footer>
+        </div>
+        </div>
+      </footer>
     <!-- END MAIN -->
     <!-- //////////////////////////////////////////////////////////////////////////// -->
     <!-- ================================================
