--- a/src/welcome/index.html
+++ b/src/welcome/index.html
@@ -83,10 +83,10 @@
                   <div class="left-align valign-wrapper col s8" >
                       <div class="row" style="max-width:400px;">
                       <div style="color:white;font-size:16px;" class="col s6">Birthday
-                        <input id="bday" class="userinfo" style="background-color:#8CDEFD;margin-right:15px;height:50px;color:white;font-size:18px;padding-left:10px;border:none;" placeholder="MM/DD/YYYY" type="text"/>
+                        <input id="bday" class="userinfo" style="background-color:#8CDEFD;margin-right:15px;height:50px;color:white;font-size:18px;padding-left:10px;border:none;" placeholder="mm/dd/yyy" type="text"/>
                       </div>
                         <div style="color:white;font-size:16px;" class="col s6">Zip Code
-                          <input class="userinfo" style="background-color:#8CDEFD;height:50px;color:white;font-size:18px;padding-left:10px;border:none" id="zip" placeholder="Zip Code" type="text"/>
+                          <input class="userinfo"  style="background-color:#8CDEFD;height:50px;color:white;font-size:18px;padding-left:10px;border:none" id="zip" placeholder="Zip Code" type="number"/>
                         </div>
                     </div>
                   </div>
@@ -135,7 +135,7 @@
     <script src="/__/firebase/4.5.0/firebase-firestore.js"></script>
     <script src="/__/firebase/4.5.0/firebase-storage.js"></script>
     <script src="/__/firebase/init.js"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCFkCxV_3OOisXaIwa3SKd4VkXQPDqTS3k&libraries=places&callback=initAutocomplete" async defer></script>
     <script src="../util/util.js"></script>    
     <script src="assets/js/index.js"></script>
    
